# hh-vacancy-parser

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
src/api/: hh_api.py
src/db/: db_creator.py  db_manager.py  db_saver.py  fill_db.py
